--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
         HUGO_VERSION: ${{ vars.HUGO_VERSION }}
+        WEBSITE: ${{ vars.WEBSITE }}
 
     steps:
     - name: Checkout repository
@@ -27,19 +28,17 @@ jobs:
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
-      run: hugo --minify --baseURL https://test.villadetara.com
+      run: hugo --minify --baseURL https://${WEBSITE}
 
     - name: Deploy to Synology NAS
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SSH_USER: ${{ secrets.SSH_USER }}
-        SSH_HOST: ${{ secrets.SSH_HOST }}
+        SSH_USER: ${{ secrets.SSH_USER }}        
         SSH_PORT: ${{ secrets.SSH_PORT }}
-        SSH_TARGET_DIR: "/volume1/web/mysite"
+        SSH_TARGET_DIR: "/volume1/web/${WEBSITE}"
       run: |
         echo "$SSH_PRIVATE_KEY" > id_ed25519 && chmod 600 id_ed25519
-        export RSYNC_RSH="ssh -p $SSH_PORT -i id_rsa"
+        export RSYNC_RSH="ssh -p $SSH_PORT -i ./id_ed25519"
         tar -czf site.tar.gz -C public .
-        scp -o StrictHostKeyChecking=no -P $SSH_PORT -O site.tar.gz $SSH_USER@$SSH_HOST:/volume1/homes/$SSH_USER/site.tar.gz
-        ssh -o StrictHostKeyChecking=no -p $SSH_PORT -i id_rsa $SSH_USER@$SSH_HOST "sudo tar -xzf \
-            /volume1/homes/$SSH_USER/site.tar.gz -C $SSH_TARGET_DIR"
+        scp -o StrictHostKeyChecking=no -P $SSH_PORT -i ./id_ed25519 -O site.tar.gz $SSH_USER@$WEBSITE:
+        ssh -o StrictHostKeyChecking=no -p $SSH_PORT -i ./id_ed25519 $SSH_USER@$WEBSITE "sudo tar -xzf site.tar.gz -C $SSH_TARGET_DIR"
