fix: Delete site file after successful extraction

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,8 +11,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-        HUGO_VERSION: ${{ vars.HUGO_VERSION }}
-        WEBSITE: ${{ vars.WEBSITE }}
+      WEBSITE: ${{ vars.WEBSITE }}
+      HUGO_VERSION: ${{ vars.HUGO_VERSION }}
+      DOWNLOAD_LOCATION: "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}"
+      DOWNLOAD_FILE: "hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz"
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_USER: ${{ secrets.SSH_USER }}        
+      SSH_PORT: ${{ secrets.SSH_PORT }}
+      SSH_TARGET_DIR: "/volume1/web/${WEBSITE}"
+      SCP_CMD: "scp -o StrictHostKeyChecking=no -P ${SSH_PORT} -i ./id_ed25519"
+      SSH_CMD: "scp -o StrictHostKeyChecking=no -p ${SSH_PORT} -i ./id_ed25519"
 
     steps:
     - name: Checkout repository
@@ -20,25 +28,18 @@ jobs:
       with:
         submodules: 'true'  # Ensures theme submodules are pulled
 
-    - name: Install Hugo
-      
+    - name: Install Hugo      
       run: |
-        wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-        tar -xzf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
+        wget ${DOWNLOAD_LOCATION}/${DOWNLOAD_FILE}
+        tar -xzf ${DOWNLOAD_FILE}
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
       run: hugo --minify --baseURL https://${WEBSITE}
 
     - name: Deploy to Synology NAS
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SSH_USER: ${{ secrets.SSH_USER }}        
-        SSH_PORT: ${{ secrets.SSH_PORT }}
-        SSH_TARGET_DIR: "/volume1/web/${WEBSITE}"
       run: |
-        echo "$SSH_PRIVATE_KEY" > id_ed25519 && chmod 600 id_ed25519
-        export RSYNC_RSH="ssh -p $SSH_PORT -i ./id_ed25519"
-        tar -czf site.tar.gz -C public .
-        scp -o StrictHostKeyChecking=no -P $SSH_PORT -i ./id_ed25519 -O site.tar.gz $SSH_USER@$WEBSITE:
-        ssh -o StrictHostKeyChecking=no -p $SSH_PORT -i ./id_ed25519 $SSH_USER@$WEBSITE "sudo tar -xzf site.tar.gz -C $SSH_TARGET_DIR"
+        echo "${SSH_PRIVATE_KEY}" > id_ed25519 && chmod 600 id_ed25519
+        tar -czf ${WEBSITE}.tar.gz -C public .
+        ${SCP_CMD} -O ${WEBSITE}.tar.gz ${SSH_USER}@${WEBSITE}:
+        ${SSH_CMD} ${SSH_USER}@${WEBSITE} "sudo tar -xzf ${WEBSITE}.tar.gz -C ${SSH_TARGET_DIR} && rm -f ${WEBSITE}.tar.gz"
