--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,8 +13,6 @@ jobs:
     env:
       WEBSITE: ${{ vars.WEBSITE }}
       HUGO_VERSION: ${{ vars.HUGO_VERSION }}
-      DOWNLOAD_LOCATION: "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}"
-      DOWNLOAD_FILE: "hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz"
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_USER: ${{ secrets.SSH_USER }}        
       SSH_PORT: ${{ secrets.SSH_PORT }}
@@ -30,8 +28,8 @@ jobs:
 
     - name: Install Hugo      
       run: |
-        wget ${DOWNLOAD_LOCATION}/${DOWNLOAD_FILE}
-        tar -xzf ${DOWNLOAD_FILE}
+        wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
+        tar -xzf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
