--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,8 +17,6 @@ jobs:
       SSH_USER: ${{ secrets.SSH_USER }}        
       SSH_PORT: ${{ secrets.SSH_PORT }}
       SSH_TARGET_DIR: "/volume1/web/${WEBSITE}"
-      SCP_CMD: "scp -o StrictHostKeyChecking=no -P ${SSH_PORT} -i ./id_ed25519"
-      SSH_CMD: "ssh -o StrictHostKeyChecking=no -p ${SSH_PORT} -i ./id_ed25519"
 
     steps:
     - name: Checkout repository
@@ -39,5 +37,5 @@ jobs:
       run: |
         echo "${SSH_PRIVATE_KEY}" > id_ed25519 && chmod 600 id_ed25519
         tar -czf ${WEBSITE}.tar.gz -C public .
-        ${SCP_CMD} -O ${WEBSITE}.tar.gz ${SSH_USER}@${WEBSITE}:
-        ${SSH_CMD} ${SSH_USER}@${WEBSITE} "sudo tar -xzf ${WEBSITE}.tar.gz -C ${SSH_TARGET_DIR} && rm -f ${WEBSITE}.tar.gz"
+        scp -o StrictHostKeyChecking=no -P ${SSH_PORT} -i ./id_ed25519 -O ${WEBSITE}.tar.gz ${SSH_USER}@${WEBSITE}:
+        ssh -o StrictHostKeyChecking=no -p ${SSH_PORT} -i ./id_ed25519 ${SSH_USER}@${WEBSITE} "sudo tar -xzf ${WEBSITE}.tar.gz -C ${SSH_TARGET_DIR} && rm -f ${WEBSITE}.tar.gz"
