feat: Add 'buildDrafts' 'buildFuture' and 'logLevel' to hugo command

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
-      run: hugo --environment development --minify --baseURL https://${WEBSITE}
+      run: hugo --environment development --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel info
 
     - name: Deploy to Synology NAS
       run: |
