--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
     env:
       WEBSITE: ${{ vars.WEBSITE }}
       HUGO_VERSION: ${{ vars.HUGO_VERSION }}
+      HUGO_ENVIRONMENT: "development"
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_USER: ${{ secrets.SSH_USER }}        
       SSH_PORT: ${{ secrets.SSH_PORT }}
@@ -31,7 +32,7 @@ jobs:
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
-      run: hugo --environment development --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel info
+      run: hugo --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel info
 
     - name: Deploy to Synology NAS
       run: |
