--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,7 @@ jobs:
       WEBSITE: ${{ vars.WEBSITE }}
       HUGO_VERSION: ${{ vars.HUGO_VERSION }}
       HUGO_ENVIRONMENT: "development"
+      LOG_LEVEL: ${{ vars.LOG_LEVEL }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_USER: ${{ secrets.SSH_USER }}        
       SSH_PORT: ${{ secrets.SSH_PORT }}
@@ -32,7 +33,7 @@ jobs:
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
-      run: hugo --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel info
+      run: hugo --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel ${LOG_LEVEL}
 
     - name: Deploy to Synology NAS
       run: |
