--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,6 @@ jobs:
     env:
       WEBSITE: ${{ vars.WEBSITE }}
       HUGO_VERSION: ${{ vars.HUGO_VERSION }}
-      HUGO_ENVIRONMENT: "development"
       LOG_LEVEL: ${{ vars.LOG_LEVEL }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_USER: ${{ secrets.SSH_USER }}        
@@ -33,7 +32,7 @@ jobs:
         sudo mv hugo /usr/local/bin/
 
     - name: Build Hugo Site
-      run: hugo --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel ${LOG_LEVEL}
+      run: hugo --environment development --minify --baseURL https://${WEBSITE} --buildDrafts --buildFuture --logLevel ${LOG_LEVEL}
 
     - name: Deploy to Synology NAS
       run: |
