--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -40,5 +40,5 @@ jobs:
           chmod 700 /home/runner/.ssh && \
           echo "${SSH_PRIVATE_KEY}" > /home/runner/.ssh/id_ed25519 && \
           chmod 600 /home/runner/.ssh/id_ed25519
-        rsync -drvze "ssh -v -p ${SSH_PORT} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /home/runner/.ssh/id_ed25519" public/* ${SSH_USER}@staging.${WEBSITE}:staging.${WEBSITE}/public
+        rsync -drvze "ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /home/runner/.ssh/id_ed25519" public/* ${SSH_USER}@staging.${WEBSITE}:staging.${WEBSITE}/public
         ssh -p ${SSH_PORT} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /home/runner/.ssh/id_ed25519 ${SSH_USER}@staging.${WEBSITE} "sudo rsync -drv staging.${WEBSITE}/public/* /volume1/web/staging.${WEBSITE}"
