fix: Refactor 'Setup SSH key'

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -51,9 +51,10 @@ jobs:
       run: hugo --environment staging --minify --baseURL ${BASE_URL} --logLevel ${LOG_LEVEL}
 
     - name: Setup SSH key
-      run: mkdir /home/runner/.ssh && \
-        chmod 700 /home/runner/.ssh && \
-        echo "${SSH_PRIVATE_KEY}" > /home/runner/.ssh/id_ed25519 && \
+      run: |
+        mkdir /home/runner/.ssh
+        chmod 700 /home/runner/.ssh
+        echo "${SSH_PRIVATE_KEY}" > /home/runner/.ssh/id_ed25519
         chmod 600 /home/runner/.ssh/id_ed25519
 
     - name: rsync to Synology NAS
