--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -62,7 +62,7 @@ jobs:
         REMOTE_HOST: ${{ env.REMOTE_HOST }}
         RSYNC_OPTIONS: ${{ env.RSYNC_OPTIONS }}
         SSH_OPTIONS: ${{ env.SSH_OPTIONS }}
-      run: rsync ${RSYNC_OPTIONS} --rsh="${SSH_OPTIONS}" public/* ${REMOTE_HOST}:${TRANSFER_DIR}
+      run: rsync ${RSYNC_OPTIONS} --rsh="ssh ${SSH_OPTIONS}" public/* ${REMOTE_HOST}:${TRANSFER_DIR}
 
     - name: Copy to website directory
       env:
