--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -23,6 +23,8 @@ jobs:
       run: |
         BASE_URL="https://staging.${WEBSITE}"
         echo "BASE_URL=${BASE_URL}" >> ${GITHUB_ENV}
+        HUGO_DOWNLOAD="https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb"
+        echo "HUGO_DOWNLOAD=${HUGO_DOWNLOAD}" >> ${GITHUB_ENV}
         REMOTE_HOST="${SSH_USER}@staging.${WEBSITE}"
         echo "REMOTE_HOST=${REMOTE_HOST}" >> ${GITHUB_ENV}
         RSYNC_OPTIONS="--compress --delete --recursive --verbose"
@@ -39,11 +41,12 @@ jobs:
       with:
         submodules: 'true'
 
-    - name: Install Hugo      
+    - name: Install Hugo
+      env:
+        HUGO_DOWNLOAD: ${{ env.HUGO_DOWNLOAD }}    
       run: |
-        wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-        tar -xzf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-        sudo mv hugo /usr/local/bin/
+          wget -O ${{ runner.temp }}/hugo.deb ${HUGO_DOWNLOAD} && \
+          sudo dpkg -i ${{ runner.temp }}/hugo.deb
 
     - name: Build website
       env:
