feat: Tidy up variable declarations

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -1,4 +1,4 @@
-name: Deploy staging.villadetara.com
+name: Deploy staging.robinvenables.com
 
 on:
   push:
@@ -42,33 +42,22 @@ jobs:
         submodules: 'true'
 
     - name: Install Hugo
-      env:
-        HUGO_DOWNLOAD: ${{ env.HUGO_DOWNLOAD }}    
       run: |
-          wget -O ${{ runner.temp }}/hugo.deb ${HUGO_DOWNLOAD} && \
-          sudo dpkg -i ${{ runner.temp }}/hugo.deb
+        wget -O ${{ runner.temp }}/hugo.deb ${{ env.HUGO_DOWNLOAD }} && \
+        sudo dpkg -i ${{ runner.temp }}/hugo.deb
 
     - name: Build website
-      env:
-        BASE_URL: ${{ env.BASE_URL}}
-      run: hugo --environment staging --minify --baseURL ${BASE_URL} --logLevel ${LOG_LEVEL}
+      run: hugo --environment staging --minify --baseURL ${{ env.BASE_URL }} --logLevel ${LOG_LEVEL}
 
     - name: Setup SSH key
       run: |
-        mkdir /home/runner/.ssh
-        chmod 700 /home/runner/.ssh
-        echo "${SSH_PRIVATE_KEY}" > /home/runner/.ssh/id_ed25519
-        chmod 600 /home/runner/.ssh/id_ed25519
+        mkdir /home/runner/.ssh && \
+          chmod 700 /home/runner/.ssh && \
+          echo "${SSH_PRIVATE_KEY}" > /home/runner/.ssh/id_ed25519 && \
+          chmod 600 /home/runner/.ssh/id_ed25519
 
     - name: rsync to Synology NAS
-      env:
-        REMOTE_HOST: ${{ env.REMOTE_HOST }}
-        RSYNC_OPTIONS: ${{ env.RSYNC_OPTIONS }}
-        SSH_OPTIONS: ${{ env.SSH_OPTIONS }}
-      run: rsync ${RSYNC_OPTIONS} --rsh="ssh ${SSH_OPTIONS}" public/* ${REMOTE_HOST}:${TRANSFER_DIR}
+      run: rsync ${{ env.RSYNC_OPTIONS }} --rsh="ssh ${{ env.SSH_OPTIONS }}" public/* ${{ env.REMOTE_HOST }}:${{ env.TRANSFER_DIR }}
 
     - name: Copy to website directory
-      env:
-        REMOTE_HOST: ${{ env.REMOTE_HOST }}
-        SSH_OPTIONS: ${{ env.SSH_OPTIONS }}
-      run: ssh ${SSH_OPTIONS} ${REMOTE_HOST} "sudo cp -pr ${TRANSFER_DIR}/* ${WEBSITE_DIR}"
+      run: ssh ${{ env.SSH_OPTIONS }} ${{ env.REMOTE_HOST }} "sudo cp -pr ${{ env.TRANSFER_DIR }}/* ${{ env.WEBSITE_DIR }}"
