feat: Update visitors
Add Lisa and Chris' flight details
Move Sam and Chris to Past Visits

--- a/data/visitors/visits.yaml
+++ b/data/visitors/visits.yaml
@@ -1,3 +1,6 @@
+- who: Sam, Chris and Natie
+  arrival: 23 July 2025
+  departure: 5 August 2025
 - who: Simon
   arrival: 16 June 2025
   departure: 23 June 2025
