--- a/data/visitors/bookings.yaml
+++ b/data/visitors/bookings.yaml
@@ -1,13 +1,8 @@
-- who: Sam, Chris and Natie
-  arrival: 23 July 2025
-  departure: 5 August 2025
-  inbound: LHR - CHQ BA0660 12:40
-  outbound: CHQ - LHR BA0661 15:50
 - who: Lisa, Chris and Immy
   arrival: 19 August 2025
   departure: 1 September 2025
-  inbound: TBA
-  outbound: TBA
+  inbound: BHX - CHQ LS1243 21:30
+  outbound: CHQ - BHX FR4246 20:10
 - who: Simon
   arrival: 4 September 2025
   departure: 11 September 2025
