feat: Add Lesley and Nick's visit

--- a/data/visitors/bookings.yaml
+++ b/data/visitors/bookings.yaml
@@ -13,3 +13,8 @@
   departure: 18 September 2025
   inbound: BRS - CHQ LS1887 14:15
   outbound: CHQ - BRS LS1888 15:00
+- who: Lesley and Nick
+  arrival: 20 June 2026
+  departure: 27 June 2026
+  inbound: TBA
+  outbound: TBA
