--- a/data/visitors/visits.yaml
+++ b/data/visitors/visits.yaml
@@ -1,3 +1,6 @@
+- who: Lisa, Chris and Immy
+  arrival: 19 August 2025
+  departure: 1 September 2025
 - who: Sam, Chris and Natie
   arrival: 23 July 2025
   departure: 5 August 2025
