feat: Move Simon to Past Visits

--- a/data/visitors/visits.yaml
+++ b/data/visitors/visits.yaml
@@ -1,3 +1,9 @@
+- who: Jane and Frank
+  arrival: 11 September 2025
+  departure: 18 September 2025
+- who: Simon
+  arrival: 4 September 2025
+  departure: 11 September 2025
 - who: Lisa, Chris and Immy
   arrival: 19 August 2025
   departure: 1 September 2025
