feat: Add Lesley and Nick's flight details

--- a/data/visitors/bookings.yaml
+++ b/data/visitors/bookings.yaml
@@ -1,5 +1,5 @@
 - who: Lesley and Nick
   arrival: 20 June 2026
   departure: 27 June 2026
-  inbound: TBA
-  outbound: TBA
+  inbound: LGW - CHQ EZY8225 21:40
+  outbound: CHQ - LGW EZY8224 17:35
