feat: Change 'Posts' menu item to 'Blog'

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -31,7 +31,7 @@ newContentEditor = "code"
     weight = 10
 
   [[menu.main]]
-    name = "Posts"
+    name = "Blog"
     pre = "<span data-feather='pen-tool'></span>"
     url = "/posts/"
     weight = 20
