feat: Remove Gokarna as a module and add under themes

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,13 +5,10 @@ defaultContentLanguage = "en"
 enableEmoji = true
 enableRobotsTXT = true
 newContentEditor = "code"
+theme = "gokarna"
 
 [Permalinks]
    posts = "/:year/:month/:contentbasename/"
-
-[module]
-  [[module.imports]]
-    path = 'github.com/526avijitgupta/gokarna'
 
 [params]
   mainSections = ["posts", "reviews"]
